--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,13 +29,14 @@ body {
 
 .container .image-parfum img {
     width: 100%;
+    height: 100%;
     border-radius: 12px 0 0 12px;
 }
 
 /* =================================== */
 
 .container .info {
-  padding: 3rem 3rem 0 0;
+  padding: 3rem 3rem 4rem 0;
 }
 
 /* ---------------------------- */
